src/layout/main-layout.css
.container {
  display: flex;
  flex-direction: row;
  /* align-items: center; */
  height: 100vh;
  max-height: 100%;
  width: 100%;
  max-width: 100%;
}

.left-side {
  background-color: red;
  width: 30%;
  padding: 2%;
}

.right-side {
  background-color: blue;
  width: 100%;
  padding: 2%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.upper-menu {
  width: 100%;
  height: max;
  background-color: aqua;

}
.content-area {
  background-color: yellow;
  height: 100%;
}

